test_regress/t/t_gate_basic_specify_bad.out
%Warning-RISEFALLDLY: t/t_gate_basic.v:25:11: Unsupported: rising/falling/turn-off delays. Using the first delay
   25 |   nand  #(2,3)   ND0 (nd0, a[0], b[0], b[1]);
      |           ^
                      ... For warning description see https://verilator.org/warn/RISEFALLDLY?v=latest
                      ... Use "/* verilator lint_off RISEFALLDLY */" and lint_on around source to disable this message.
%Warning-SPECIFYIGN: t/t_gate_basic.v:49:25: Ignoring unsupported: specify block construct
   49 |     (nt0 *> nt0) = (0, 0);
      |                         ^
                     ... For warning description see https://verilator.org/warn/SPECIFYIGN?v=latest
                     ... Use "/* verilator lint_off SPECIFYIGN */" and lint_on around source to disable this message.
%Warning-SPECIFYIGN: t/t_gate_basic.v:59:31: Ignoring unsupported: specify block construct
   59 |    (A1 *> Q) = (a$A1$Y, a$A1$Y);
      |                               ^
%Error: Exiting due to
